--- a/src/main/resources/assets/createdieselgenerators/lang/en_us.json
+++ b/src/main/resources/assets/createdieselgenerators/lang/en_us.json
@@ -1,5 +1,5 @@
 {
-  "itemGroup.cdg_creative_tab": "Create: Diesel Generators",
+  "createdieselgenerators.group.main": "Create: Diesel Generators",
   "item.createdieselgenerators.engine_piston": "Engine Piston",
   "item.createdieselgenerators.engine_silencer": "Engine Silencer",
   "item.createdieselgenerators.plant_oil_bucket": "Plant Oil Bucket",
